--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "next-auth": "4.24.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "^16.0.8",
+    "next-auth": "^4.24.13",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   }
 }
