--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 NEXTAUTH_SECRET=replace-with-random-string
 NEXTAUTH_URL=http://localhost:3000
 # For Vercel deployments, set NEXTAUTH_URL to your production domain:
-# NEXTAUTH_URL=https://your-project.vercel.app
+# NEXTAUTH_URL=https://antigravity-agent-oauth.vercel.app
